--- a/config/IguanaTinkerTweaks/Modules.cfg
+++ b/config/IguanaTinkerTweaks/Modules.cfg
@@ -5,7 +5,7 @@
     B:Debug=false
 
     # Modify tool and item mining levels to create a tiered-ish progression
-    B:HarvestLevelTweaks=true
+    B:HarvestLevelTweaks=false
 
     # All the Items Iguana Tweaks for TConstruct adds (Clay Buckets,...)
     B:Items=true
@@ -20,7 +20,7 @@
     B:Override=false
 
     # Various Tweaks for vanilla Minecraft and Tinker's Construct. See Config.
-    B:Restrictions=true
+    B:Restrictions=False
 
     # The Iguana Tweaks Leveling System for Tinker's Tools
     B:ToolLeveling=true
