Removes disabling of regular tools and regular stone tools also disables remove flint Drop

--- a/config/IguanaTinkerTweaks/main.cfg
+++ b/config/IguanaTinkerTweaks/main.cfg
@@ -292,10 +292,10 @@ tweaks {
     B:disableRegularSwords=false
 
     # Makes all non-TConstruct tools mine nothing [default: true]
-    B:disableRegularTools=true
+    B:disableRegularTools=false
 
     # Stone Tools can only be used to create casts, but no tools [default: true]
-    B:disableStoneTools=true
+    B:disableStoneTools=false
 
     # Allows to craft tool parts with a pattern and the material in any crafting grid. [default: false]
     B:easyPartCrafting=false
@@ -322,7 +322,7 @@ tweaks {
     B:moreModifiersForFlux=true
 
     # Removes the random chance of getting flint from gravel [default: true]
-    B:removeFlintDrop=true
+    B:removeFlintDrop=false
 
     # Removes the creation of Obsidian in the Smeltery. This is normally used to prevent the early pre-diamond creation of obsidian tools. [default: true]
     B:removeObsidianAlloy=true
