whitelist pastebin.com and allows robots to attack players

--- a/config/OpenComputers.cfg
+++ b/config/OpenComputers.cfg
@@ -536,7 +536,9 @@ opencomputers {
     # whitelist and the blacklist, the blacklist will win.
     # Entries are of the same format as in the blacklist. Examples:
     # "gist.github.com", "www.pastebin.com"
-    whitelist=[]
+    whitelist=[
+    "www.pastebin.com"
+    ]
   }
 
   # Other settings that you might find useful to tweak.
@@ -989,7 +991,7 @@ opencomputers {
     # Whether robots may damage players if they get in their way. This
     # includes all 'player' entities, which may be more than just real players
     # in the game.
-    canAttackPlayers=false
+    canAttackPlayers=true
 
     # Allows fine-tuning of delays for robot actions.
     delays {
