Have forgeIRC post deaths to irc and irc_joins to the server.

--- a/serverconfig/ForgeIRC.cfg
+++ b/serverconfig/ForgeIRC.cfg
@@ -7,8 +7,8 @@ channel {
 
 
 events {
-    B:Deaths=false
-    B:IRC_Joins=false
+    B:Deaths=true
+    B:IRC_Joins=true
     B:IRC_Nick_Changes=true
     B:minecraft_joins=true
 }
