--- a/config/ttCore.cfg
+++ b/config/ttCore.cfg
@@ -20,7 +20,7 @@ general {
     I:disableVoidFog=2
 
     # Show item registry names and other things in debug mode (f3+h)
-    B:extraDebugStuff=true
+    B:extraDebugStuff=false
 
     # Show oredictionary names of every item in its tooltip.
     B:showOredictTooltips=false
