--- a/config/INpureProjects/custom_nei_filters/custom_nei_filters.cfg
+++ b/config/INpureProjects/custom_nei_filters/custom_nei_filters.cfg
@@ -4,6 +4,7 @@ scripting {
     S:AE2_enabled=true
     S:Bibliocraft_enabled=true
     S:BuildCraft_enabled=true
+    S:ExtraCells_enabled=true
     S:ExtraUtilities_enabled=true
     S:ForgeMicroblock_enabled=true
     S:MFR_enabled=true
