--- a/config/TinkersConstruct.cfg
+++ b/config/TinkersConstruct.cfg
@@ -76,16 +76,16 @@ looks {
 
 mobs {
     # Set to 0 to disable
-    I:"Blue Slime spawn chance"=1
+    I:"Blue Slime spawn chance"=10
 }
 
 
 "smeltery output modification" {
     # Number of ingots returned from smelting Aluminum Brass in the smeltery
-    I:"Aluminum Brass ingot return"=4
+    I:"Aluminum Brass ingot return"=6
 
     # Number of ingots returned from smelting Alumite in the smeltery
-    I:"Alumite ingot return"=3
+    I:"Alumite ingot return"=5
 
     # Number of ingots returned from smelting Bronze in the smeltery
     I:"Bronze ingot return"=4
@@ -94,10 +94,10 @@ mobs {
     I:"Ingots per ore"=2
 
     # Number of ingots returned from smelting Manyullyn in the smeltery
-    I:"Manyullyn ingot return"=1
+    I:"Manyullyn ingot return"=2
 
     # Number of ingots returned from smelting Pig Iron in the smeltery
-    I:"Pig Iron ingot return"=1
+    I:"Pig Iron ingot return"=3
 }
 
 
@@ -117,21 +117,21 @@ superfun {
     B:"Change Ghast drops to Gold Ingots"=false
     B:"Necrotic modifier only heals on hostile mob kills"=false
     B:"Passive Health Regen"=true
-    B:"Players drop heads on death"=false
+    B:"Players drop heads on death"=true
     I:"World Border Radius"=10000
 }
 
 
 worldgen {
-    I:"Aluminum Bush Density"=2
+    I:"Aluminum Bush Density"=3
     I:"Aluminum Bush Max Y"=60
-    I:"Aluminum Bush Min Y"=0
+    I:"Aluminum Bush Min Y"=1
     I:"Aluminum Bush Rarity"=2
-    I:"Aluminum Surface Rarity"=50
-    I:"Aluminum Underground Density"=3
+    I:"Aluminum Surface Rarity"=10
+    I:"Aluminum Underground Density"=10
     I:"Aluminum Underground Max Y"=64
     I:"Aluminum Underground Min Y"=0
-    I:"Cobalt Surface Rarity"=2000
+    I:"Cobalt Surface Rarity"=40
     I:"Copper Bush Density"=2
     I:"Copper Bush Max Y"=60
     I:"Copper Bush Min Y"=20
@@ -167,7 +167,7 @@ worldgen {
 
 "worldgen disabler" {
     B:"Add Village Generation"=true
-    B:"Enable the Tinkers Villager to trade for oreberries"=true
+    B:"Enable the Tinkers Villager to trade for oreberries"=false
     B:"Generate Aluminum"=true
     B:"Generate Aluminum Bushes"=true
     B:"Generate Cobalt and Ardite"=true
