--- a/config/IguanaTinkerTweaks/Modules.cfg
+++ b/config/IguanaTinkerTweaks/Modules.cfg
@@ -17,7 +17,7 @@
     B:MultipartCompat=true
 
     # This module allows to override about any values relevant for TConstruct or IguanaTinkerTweaks.
-    B:Override=false
+    B:Override=true 
 
     # Various Tweaks for vanilla Minecraft and Tinker's Construct. See Config.
     B:Restrictions=False
@@ -29,7 +29,7 @@
     B:ToolPartReplacing=true
 
     # Various Tweaks for vanilla Minecraft and Tinker's Construct. See Config.
-    B:Tweaks=true
+    B:Tweaks=false
 
     # This module takes care of additional awesome dungeon loot.
     B:WorldGen=true
