--- a/config/IguanaTinkerTweaks/main.cfg
+++ b/config/IguanaTinkerTweaks/main.cfg
@@ -101,10 +101,10 @@ debug {
 
 harvestleveltweaks {
     # Changes the Diamond and Emerald modifier: Apply it to a bronze level tool to obtain diamond level. Required unless you have steel or similar. [default: true]
-    B:diamondRequired=true
+    B:diamondRequired=False
 
     # Change durability of all tool materials (in percent) [range: 1 ~ 999, default: 80]
-    I:durabilityPercentage=80
+    I:durabilityPercentage=100
 
     # Change mining speed of all tool materials (in percent) [range: 1 ~ 999, default: 100]
     I:miningSpeedPercentage=100
@@ -122,7 +122,7 @@ mobheads {
     I:baseDropChange=5
 
     # Percentage added to base percentage per level of Beheading modifier [range: 1 ~ 100, default: 2]
-    I:beheadingDropChange=2
+    I:beheadingDropChange=50
 }
 
 
@@ -158,7 +158,7 @@ pickleveling {
     B:pickaxeBoostRequired=true
 
     # Change the percentage of XP required to boost a pick (i.e. 200 means 2x normal boost xp required) [range: 1 ~ 999, default: 100]
-    I:xpRequiredPickBoostPercentage=100
+    I:xpRequiredPickBoostPercentage=50
 }
 
 
@@ -199,6 +199,7 @@ randombonuses {
 toolleveling {
     # Adds a random bonus on these levelups if 'RandomBonuses' is enabled
     I:BonusesAtLevels <
+        1
         2
         3
         4
@@ -214,7 +215,9 @@ toolleveling {
 
     # Adds an extra modifier on these levelups if 'ExtraModifiers' is enabled
     I:ModifiersAtLevels <
+        1
         2
+        3
         4
         6
      >
@@ -244,7 +247,7 @@ toolleveling {
     B:toolLeveling=true
 
     # Exponential multiplier for required boost xp per level [range: 1.0 ~ 9.99, default: 1.12]
-    S:xpPerBoostLevelMultiplier=1.12
+    S:xpPerBoostLevelMultiplier=1
 
     # Exponential multiplier for required xp per level [range: 1.0 ~ 9.99, default: 1.15]
     S:xpPerLevelMultiplier=1.15
@@ -325,7 +328,7 @@ tweaks {
     B:removeFlintDrop=false
 
     # Removes the creation of Obsidian in the Smeltery. This is normally used to prevent the early pre-diamond creation of obsidian tools. [default: true]
-    B:removeObsidianAlloy=true
+    B:removeObsidianAlloy=False
 
     # Removes the recipe for Tinker's Construct's stone torch [default: false]
     B:removeStoneTorchRecipe=false
@@ -333,5 +336,4 @@ tweaks {
     # Limits the amount how often a tool can be repaired. -1 means unlimited repairs, like normally. [range: -1 ~ 999, default: -1]
     I:repairsLimit=-1
 }
-
 
