Update configs for latest mod versions

--- a/config/VoltzEngine.cfg
+++ b/config/VoltzEngine.cfg
@@ -12,11 +12,16 @@ commands {
 
     # Turns off all commands built into Voltz Engine [default: false]
     B:DisableServerCommands=false
+
+    # Enabled Voltz Engine built in command permission system that works much like Bukkit's PermissionEx Plugin [default: false]
+    B:EnablePermissionSystem=false
 }
 
 
 content {
+    B:LoadInstantHole=false
     B:LoadScrewDriver=true
+    B:LoadSelectionTool=true
 }
 
 
