--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -524,6 +524,9 @@ tweaks {
     items {
 
         goggles {
+            # 
+            # Change to 'trackingAura=false' to disable the Tracking Aura
+            # 
             B:trackingAura=true
         }
 
