--- a/config/chisel.cfg
+++ b/config/chisel.cfg
@@ -13,6 +13,9 @@ block {
 
 
 chisel {
+    # Should someone be able to chisel something into a different color.
+    B:allowChiselCrossColors=true
+
     # Should the chisel be damageable and take damage when it chisels something.
     B:allowChiselDamage=true
 
@@ -57,6 +60,7 @@ client {
 features {
     B:aeCertusQuartz=true
     B:aeSkyStone=true
+    B:aluminum=true
     B:amber=true
     B:andesite=true
     B:antiblock=true
@@ -68,6 +72,7 @@ features {
     B:bloodRune=true
     B:bookshelf=true
     B:brickCustom=true
+    B:bronze=true
     B:carpet=true
     B:carpetFloor=true
     B:chisel=true
@@ -102,6 +107,7 @@ features {
     B:laboratory=true
     B:lapisBlock=true
     B:lavastone=true
+    B:lead=true
     B:leaves=true
     B:limestone=true
     B:marble=true
@@ -128,10 +134,12 @@ features {
     B:roadLine=true
     B:sandstone=true
     B:sandstoneScribbles=true
+    B:silver=true
     B:smashingRock=true
     B:snakeSandstone=true
     B:snakestone=true
     B:snakestoneObsidian=true
+    B:steel=true
     B:stoneBrick=true
     B:tallow=true
     B:technical=true
@@ -141,9 +149,12 @@ features {
     B:tfTowerstone=true
     B:tfUnderBrick=true
     B:thaumium=true
+    B:tin=true
     B:torch=true
     B:twilghtForest=true
     B:tyrian=true
+    B:uranium=true
+    B:valentines=true
     B:voidstone=true
     B:voidstonePillars=true
     B:warningSign=true
@@ -173,6 +184,57 @@ general {
 
     # Do you want to enable FMP
     B:enableFMP=true
+}
+
+
+hexcolors {
+    # Black color for hex block overlay #RRGGBB
+    S:hexblack=#1e1b1b
+
+    # Blue color for hex block overlay #RRGGBB
+    S:hexblue=#253192
+
+    # Brown color for hex block overlay #RRGGBB
+    S:hexbrown=#51301a
+
+    # Cyan color for hex block overlay #RRGGBB
+    S:hexcyan=#287697
+
+    # Gray color for hex block overlay #RRGGBB
+    S:hexgray=#434343
+
+    # Green color for hex block overlay #RRGGBB
+    S:hexgreen=#3b511a
+
+    # LightBlue color for hex block overlay #RRGGBB
+    S:hexlightBlue=#6689d3
+
+    # Lime color for hex block overlay #RRGGBB
+    S:hexlime=#41cd34
+
+    # Magenta color for hex block overlay #RRGGBB
+    S:hexmagenta=#c354cd
+
+    # Orange color for hex block overlay #RRGGBB
+    S:hexorange=#eb8844
+
+    # Pink color for hex block overlay #RRGGBB
+    S:hexpink=#d88198
+
+    # Purple color for hex block overlay #RRGGBB
+    S:hexpurple=#7b2fbe
+
+    # Red color for hex block overlay #RRGGBB
+    S:hexred=#b3312c
+
+    # Silver color for hex block overlay #RRGGBB
+    S:hexsilver=#ababab
+
+    # White color for hex block overlay #RRGGBB
+    S:hexwhite=#f0f0f0
+
+    # Yellow color for hex block overlay #RRGGBB
+    S:hexyellow=#decf2a
 }
 
 
