Update Iguana Tinker Tweaks configs - Mob head boosting removed - Harvest level tweaks removed - 1 modifier on tool creation - Removed various crappy modifiers from bonuses - Decrease amount of extra modifiers granted

--- a/config/IguanaTinkerTweaks/main.cfg
+++ b/config/IguanaTinkerTweaks/main.cfg
@@ -29,7 +29,13 @@ allowedtools {
 
     # Here you can exclude entire mods by adding their mod-id (the first part of the string). [default: [minecraft], [Metallurgy], [Natura], [BiomesOPlenty], [ProjRed|Exploration], [appliedenergistics2], [MekanismTool]]
     S:mods <
-        
+        minecraft
+        Metallurgy
+        Natura
+        BiomesOPlenty
+        ProjRed|Exploration
+        appliedenergistics2
+        MekanismTool
      >
 
     # Swords that are excluded if the option to nerf non-tinkers swords is enabled. [default: [Botania:manasteelSword], [Steamcraft:swordGildedGold], [Steamcraft:swordBrass], [ThermalExpansion:tool.swordInvar], [IC2:itemToolBronzeSword], [Railcraft:tool.steel.sword]]
@@ -101,10 +107,10 @@ debug {
 
 harvestleveltweaks {
     # Changes the Diamond and Emerald modifier: Apply it to a bronze level tool to obtain diamond level. Required unless you have steel or similar. [default: true]
-    B:diamondRequired=False
+    B:diamondRequired=false
 
     # Change durability of all tool materials (in percent) [range: 1 ~ 999, default: 80]
-    I:durabilityPercentage=100
+    I:durabilityPercentage=80
 
     # Change mining speed of all tool materials (in percent) [range: 1 ~ 999, default: 100]
     I:miningSpeedPercentage=100
@@ -122,7 +128,7 @@ mobheads {
     I:baseDropChange=5
 
     # Percentage added to base percentage per level of Beheading modifier [range: 1 ~ 100, default: 2]
-    I:beheadingDropChange=50
+    I:beheadingDropChange=2
 }
 
 
@@ -131,7 +137,7 @@ partreplacement {
     I:PickBoostXpPenality=5
 
     # How much of the current XP% shall be removed when replacing parts (So if you had 50%, and penality is 10% it'll remove 5% xp, resulting in 45%). Does not remove Skill Levels. [range: 0 ~ 100, default: 0]
-    I:XpPenality=0
+    I:XpPenality=15
 
     # Removes the Mob Head Modifier on Tool-Head replacement, allowing it to be reapplied. Should be used with PickBoostXpPenality. [default: true]
     B:removeMobHead=true
@@ -146,7 +152,7 @@ partreplacement {
 
 pickleveling {
     # Mob heads can be used to boost a pickaxe's mining xp. [default: true]
-    B:addMobHeadBoost=true
+    B:addMobHeadBoost=false
 
     # Pickaxes gain Mining Xp by using the pickaxe. [default: true]
     B:allowLevelingBoost=true
@@ -155,10 +161,10 @@ pickleveling {
     B:mobHeadBoostNeedsModifier=false
 
     # Every Pickaxes Mining Level is reduced by 1 and needs a mining levelup (separate from tool level) or, if enabled, a mob head modifier to advance [default: true]
-    B:pickaxeBoostRequired=true
+    B:pickaxeBoostRequired=false
 
     # Change the percentage of XP required to boost a pick (i.e. 200 means 2x normal boost xp required) [range: 1 ~ 999, default: 100]
-    I:xpRequiredPickBoostPercentage=50
+    I:xpRequiredPickBoostPercentage=100
 }
 
 
@@ -170,23 +176,23 @@ pickleveling {
 
 randombonuses {
     B:allowAttack=true
-    B:allowAutosmelt=true
-    B:allowBaneOfArthropods=true
+    B:allowAutosmelt=false
+    B:allowBaneOfArthropods=false
     B:allowBeheading=true
     B:allowCritical=true
     B:allowDiamond=true
     B:allowEmerald=true
-    B:allowFiery=true
-    B:allowJagged=true
-    B:allowKnockback=true
-    B:allowLifeSteal=true
+    B:allowFiery=false
+    B:allowJagged=false
+    B:allowKnockback=false
+    B:allowLifeSteal=false
     B:allowLuckLooting=true
     B:allowRedstone=true
     B:allowReinforced=true
     B:allowRepair=true
-    B:allowSilkTouch=true
-    B:allowSmite=true
-    B:allowStonebound=true
+    B:allowSilkTouch=false
+    B:allowSmite=false
+    B:allowStonebound=false
 }
 
 
@@ -211,13 +217,11 @@ toolleveling {
     B:CompletelyRandomBonuses=false
 
     # The amount of modifiers new tools have. [range: 0 ~ 9, default: 0]
-    I:ExtraModifiers=0
+    I:ExtraModifiers=1
 
     # Adds an extra modifier on these levelups if 'ExtraModifiers' is enabled
     I:ModifiersAtLevels <
-        1
         2
-        3
         4
         6
      >
@@ -247,7 +251,7 @@ toolleveling {
     B:toolLeveling=true
 
     # Exponential multiplier for required boost xp per level [range: 1.0 ~ 9.99, default: 1.12]
-    S:xpPerBoostLevelMultiplier=1
+    S:xpPerBoostLevelMultiplier=1.12
 
     # Exponential multiplier for required xp per level [range: 1.0 ~ 9.99, default: 1.15]
     S:xpPerLevelMultiplier=1.15
@@ -298,7 +302,7 @@ tweaks {
     B:disableRegularTools=false
 
     # Stone Tools can only be used to create casts, but no tools [default: true]
-    B:disableStoneTools=false
+    B:disableStoneTools=true
 
     # Allows to craft tool parts with a pattern and the material in any crafting grid. [default: false]
     B:easyPartCrafting=false
@@ -328,7 +332,7 @@ tweaks {
     B:removeFlintDrop=false
 
     # Removes the creation of Obsidian in the Smeltery. This is normally used to prevent the early pre-diamond creation of obsidian tools. [default: true]
-    B:removeObsidianAlloy=False
+    B:removeObsidianAlloy=false
 
     # Removes the recipe for Tinker's Construct's stone torch [default: false]
     B:removeStoneTorchRecipe=false
