--- a/config/IguanaTinkerTweaks/Modules.cfg
+++ b/config/IguanaTinkerTweaks/Modules.cfg
@@ -11,16 +11,16 @@
     B:Items=true
 
     # Adds additional MobHeads and control over MobHead drops.
-    B:MobHeads=true
+    B:MobHeads=false
 
     # Makes Saw cut stuff again
     B:MultipartCompat=true
 
     # This module allows to override about any values relevant for TConstruct or IguanaTinkerTweaks.
-    B:Override=true
+    B:Override=false
 
     # Various Tweaks for vanilla Minecraft and Tinker's Construct. See Config.
-    B:Restrictions=False
+    B:Restrictions=false
 
     # The Iguana Tweaks Leveling System for Tinker's Tools
     B:ToolLeveling=true
@@ -29,7 +29,7 @@
     B:ToolPartReplacing=true
 
     # Various Tweaks for vanilla Minecraft and Tinker's Construct. See Config.
-    B:Tweaks=false
+    B:Tweaks=true
 
     # This module takes care of additional awesome dungeon loot.
     B:WorldGen=true
