updated AE2 facades

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1275,6 +1275,30 @@ chisel {
 }
 
 
+compactmachines {
+    B:innerwall=true
+    B:innerwalldecor=true
+    B:interface=false
+    B:machine=false
+    B:machine.1=false
+    B:machine.2=false
+    B:machine.3=false
+    B:machine.4=false
+    B:machine.5=false
+    B:resizingcube=true
+}
+
+
+computercraft {
+    B:CCCable=false
+    B:CCComputer=false
+    B:CCPeripheral=false
+    B:CCTurtle=false
+    B:CCTurtleAdvanced=false
+    B:CCTurtleExpanded=false
+}
+
+
 enderio {
     B:blockAlloySmelter=false
     B:blockAttractor=false
@@ -1887,6 +1911,12 @@ madscience {
 }
 
 
+mcheli {
+    B:draftingtable=false
+    B:litdraftingtable=false
+}
+
+
 mekanism {
     B:BasicBlock=false
     B:BasicBlock.1=false
@@ -2327,6 +2357,46 @@ mystcraft {
     B:BlockStarFissure=false
     B:LinkPortal=false
     B:WritingDesk=false
+}
+
+
+openblocks {
+    B:autoanvil=false
+    B:autoenchantmenttable=false
+    B:beartrap=false
+    B:bigbutton=false
+    B:blockPlacer=false
+    B:blockbreaker=false
+    B:cannon=false
+    B:canvas=false
+    B:donationStation=false
+    B:drawingtable=false
+    B:elevator=true
+    B:fan=false
+    B:flag=false
+    B:goldenegg=false
+    B:grave=false
+    B:guide=false
+    B:heal=false
+    B:imaginary=false
+    B:itemDropper=false
+    B:ladder=false
+    B:paintcan=false
+    B:paintmixer=false
+    B:path=false
+    B:projector=false
+    B:ropeladder=false
+    B:sky=false
+    B:sponge=false
+    B:sprinkler=false
+    B:tank=false
+    B:target=false
+    B:trophy=false
+    B:vacuumhopper=false
+    B:villagehighlighter=false
+    B:xpbottler=false
+    B:xpdrain=false
+    B:xpshower=false
 }
 
 
