updated Waila config

--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -57,6 +57,7 @@ modules {
     B:oc.address=true
     B:oc.componentName=true
     B:oc.energy=true
+    B:openblocks.fluidamount=true
     B:railcraft.fluidamount=true
     B:tcon.basin=true
     B:tcon.castingchannel=true
@@ -116,6 +117,7 @@ server_forcing {
     B:oc.address=false
     B:oc.componentName=false
     B:oc.energy=false
+    B:openblocks.fluidamount=false
     B:railcraft.fluidamount=false
     B:tcon.basin=false
     B:tcon.castingchannel=false
