--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -483,7 +483,7 @@ enchantmentsoulboundweight {
     I:magnetPowerUsePerTickRF=1
 
     # Range of the magnet in blocks.
-    I:magnetRange=5
+    I:magnetRange=10
 }
 
 
@@ -567,10 +567,10 @@ misc {
     B:addFurnaceFuelTootip=true
 
     # If true, adds ore dictionary registrations to tooltips
-    B:addOreDictionaryTooltips=false
+    B:addOreDictionaryTooltips=true
 
     # If true, adds the registered name for the item
-    B:addRegisterdNameTooltip=false
+    B:addRegisterdNameTooltip=true
 
     # If false: you will not be able to access a ME access or crafting terminal using the Ender IO.
     B:enderIoMeAccessEnabled=true
@@ -779,7 +779,7 @@ rail {
     B:useModMetals=true
 
     # When enabled machine chassis will require steel instead of iron.
-    B:useSteelInChassi=false
+    B:useSteelInChassi=true
 }
 
 
