Update configs for latest mod versions
Signed-off-by: ChatFawkes <chatfawkes@gmail.com>

--- a/config/mystcraft/core.cfg
+++ b/config/mystcraft/core.cfg
@@ -31,6 +31,11 @@ balance {
     S:fluid.bronze.molten.instability.factor_flat=
     S:fluid.bronze.molten.rarity=
     S:fluid.bronze.molten.seabanned=
+    S:fluid.cement.liquid.grammar=
+    S:fluid.cement.liquid.instability.factor_accessibility=
+    S:fluid.cement.liquid.instability.factor_flat=
+    S:fluid.cement.liquid.rarity=
+    S:fluid.cement.liquid.seabanned=
     S:fluid.coal.grammar=
     S:fluid.coal.instability.factor_accessibility=
     S:fluid.coal.instability.factor_flat=
@@ -115,6 +120,11 @@ balance {
     S:fluid.lead.molten.instability.factor_flat=
     S:fluid.lead.molten.rarity=
     S:fluid.lead.molten.seabanned=
+    S:fluid.limestone.molten.grammar=
+    S:fluid.limestone.molten.instability.factor_accessibility=
+    S:fluid.limestone.molten.instability.factor_flat=
+    S:fluid.limestone.molten.rarity=
+    S:fluid.limestone.molten.seabanned=
     S:fluid.maddna.grammar=
     S:fluid.maddna.instability.factor_accessibility=
     S:fluid.maddna.instability.factor_flat=
