--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -61,6 +61,98 @@ appliedenergistics2 {
 }
 
 
+bluepower {
+    B:alloyfurnace=false
+    B:amethystblock=true
+    B:amethystore=true
+    B:basalt=true
+    B:basaltbrick=true
+    B:basaltbrickcracked=true
+    B:basaltbricksmall=true
+    B:basaltcobble=true
+    B:basaltpaver=true
+    B:basalttile=true
+    B:blockbreaker=false
+    B:buffer=false
+    B:circuitdatabase=false
+    B:circuittable=false
+    B:copperblock=true
+    B:copperore=true
+    B:crackedbasaltlava=false
+    B:deployer=false
+    B:ejector=false
+    B:fancybasalt=true
+    B:fancymarble=true
+    B:filter=false
+    B:flaxcrop=false
+    B:igniter=false
+    B:indigoflower=false
+    B:itemdetector=false
+    B:lampRGB=false
+    B:lampblack=false
+    B:lampblue=false
+    B:lampbrown=false
+    B:lampcyan=false
+    B:lampgray=false
+    B:lampgreen=false
+    B:lampinvertedRGB=false
+    B:lampinvertedblack=false
+    B:lampinvertedblue=false
+    B:lampinvertedbrown=false
+    B:lampinvertedcyan=false
+    B:lampinvertedgray=false
+    B:lampinvertedgreen=false
+    B:lampinvertedlightblue=false
+    B:lampinvertedlightgray=false
+    B:lampinvertedlime=false
+    B:lampinvertedmagenta=false
+    B:lampinvertedorange=false
+    B:lampinvertedpink=false
+    B:lampinvertedpurple=false
+    B:lampinvertedred=false
+    B:lampinvertedwhite=false
+    B:lampinvertedyellow=false
+    B:lamplightblue=false
+    B:lamplightgray=false
+    B:lamplime=false
+    B:lampmagenta=false
+    B:lamporange=false
+    B:lamppink=false
+    B:lamppurple=false
+    B:lampred=false
+    B:lampwhite=false
+    B:lampyellow=false
+    B:manager=false
+    B:marble=true
+    B:marblebrick=true
+    B:marblebricksmall=true
+    B:marblepaver=true
+    B:marbletile=true
+    B:projecttable=false
+    B:regulator=false
+    B:reinforcedsapphireglass=false
+    B:relay=false
+    B:retriever=false
+    B:rubyblock=true
+    B:rubyore=true
+    B:sapphireblock=true
+    B:sapphireglass=false
+    B:sapphireore=true
+    B:silverblock=true
+    B:silverore=true
+    B:sortingmachine=false
+    B:sortron=false
+    B:teslatiteblock=true
+    B:teslatiteore=true
+    B:tiles=true
+    B:transposer=false
+    B:tungstenblock=true
+    B:tungstenore=true
+    B:zincblock=true
+    B:zincore=true
+}
+
+
 carpentersblocks {
     B:blockCarpentersBarrier=false
     B:blockCarpentersBed=false
@@ -1349,6 +1441,7 @@ enderio {
     B:blockTravelAnchor=false
     B:blockVacuumChest=false
     B:blockVat=false
+    B:blockWeatherObelisk=false
     B:blockWirelessCharger=false
     B:blockZombieGenerator=false
 }
@@ -1357,6 +1450,21 @@ enderio {
 enderstorage {
     B:enderChest=false
     B:enderChest.1=false
+}
+
+
+endertech {
+    B:chargePad=false
+    B:chargePad.1=false
+    B:chargePad.2=false
+    B:endertechenderTankController=false
+    B:endertechenderTankPart=false
+    B:endertechenderTankPart.6=false
+    B:endertechenderTankPart.7=false
+    B:endertechmultiblockGlass=false
+    B:healthPad=false
+    B:healthPad.1=false
+    B:healthPad.2=false
 }
 
 
@@ -1732,7 +1840,28 @@ extrautilities {
 
 
 flansmod {
+    B:armorBoxEnKCTArmourBox=true
+    B:armorBoxmwArmour=true
+    B:armorBoxww2Armour=true
     B:flansWorkbench=true
+    B:gunBoxBananaBox=true
+    B:gunBoxChemicalCrate=true
+    B:gunBoxEnKCTBox=true
+    B:gunBoxMissiles=true
+    B:gunBoxNatoBox=true
+    B:gunBoxPaPmech=true
+    B:gunBoxT80Friend=true
+    B:gunBoxamerican=true
+    B:gunBoxbritish=true
+    B:gunBoxcavalry=true
+    B:gunBoxgerman=true
+    B:gunBoxjapanese=true
+    B:gunBoxmi6=true
+    B:gunBoxmodern=true
+    B:gunBoxrussian=true
+    B:gunBoxunclearChemistry=true
+    B:gunBoxvehicleBox=true
+    B:gunBoxzombieBox=true
     B:teamsSpawner=false
     B:teamsSpawner.1=false
     B:teamsSpawner.2=false
@@ -1876,7 +2005,9 @@ ic2 {
 
 icbm {
     B:TileMissile=false
+    B:TileMissile.1=false
     B:missileDisplay=false
+    B:smallLauncher=false
 }
 
 
@@ -2434,6 +2565,27 @@ opencomputers {
     B:special=false
     B:specialredstone=false
     B:switch=false
+}
+
+
+openmodularturrets {
+    B:baseTierFourBlock=false
+    B:baseTierOneBlock=false
+    B:baseTierThreeBlock=false
+    B:baseTierTwoBlock=false
+    B:baseTierWood=false
+    B:disposeItemTurret=false
+    B:grenadeTurret=false
+    B:laserTurret=false
+    B:leverBlock=false
+    B:machineGunTurret=false
+    B:railGunTurret=false
+    B:rocketTurret=false
+}
+
+
+qmunitylib {
+    B:qmunitylibblocksmultipart=false
 }
 
 
@@ -3146,6 +3298,33 @@ tconstruct {
 }
 
 
+thermaldynamics {
+    B:ThermalDynamics0=false
+    B:ThermalDynamics0.1=false
+    B:ThermalDynamics0.2=false
+    B:ThermalDynamics0.3=false
+    B:ThermalDynamics0.4=false
+    B:ThermalDynamics0.5=false
+    B:ThermalDynamics0.6=false
+    B:ThermalDynamics0.7=false
+    B:ThermalDynamics16=false
+    B:ThermalDynamics16.1=false
+    B:ThermalDynamics16.2=false
+    B:ThermalDynamics16.3=false
+    B:ThermalDynamics16.4=false
+    B:ThermalDynamics16.5=false
+    B:ThermalDynamics32=false
+    B:ThermalDynamics32.1=false
+    B:ThermalDynamics32.2=false
+    B:ThermalDynamics32.3=false
+    B:ThermalDynamics32.4=false
+    B:ThermalDynamics32.5=false
+    B:ThermalDynamics32.6=false
+    B:ThermalDynamics32.7=false
+    B:ThermalDynamics48=false
+}
+
+
 thermalexpansion {
     B:Cache=false
     B:Cache.1=false
@@ -3155,6 +3334,9 @@ thermalexpansion {
     B:Device=false
     B:Frame=false
     B:Frame.1=false
+    B:Frame.10=false
+    B:Frame.11=false
+    B:Frame.12=false
     B:Frame.2=false
     B:Frame.3=false
     B:Frame.4=false
@@ -3235,6 +3417,75 @@ thermalfoundation {
     B:Storage.7=true
     B:Storage.8=true
     B:Storage.9=true
+}
+
+
+tsteelworks {
+    B:Cement=true
+    B:Cement.1=true
+    B:Cement.10=true
+    B:Cement.11=true
+    B:Cement.12=true
+    B:Cement.13=true
+    B:Cement.14=true
+    B:Cement.15=true
+    B:Cement.2=true
+    B:Cement.3=true
+    B:Cement.4=true
+    B:Cement.5=true
+    B:Cement.6=true
+    B:Cement.7=true
+    B:Cement.8=true
+    B:Cement.9=true
+    B:HighOven=false
+    B:HighOven.1=false
+    B:HighOven.10=false
+    B:HighOven.11=false
+    B:HighOven.12=false
+    B:HighOven.13=false
+    B:HighOven.2=false
+    B:HighOven.4=false
+    B:HighOven.5=false
+    B:HighOven.6=false
+    B:HighOven.7=false
+    B:HighOven.8=false
+    B:HighOven.9=false
+    B:Limestone=true
+    B:Limestone.1=true
+    B:Limestone.2=true
+    B:Limestone.3=true
+    B:Limestone.4=true
+    B:Limestone.5=true
+    B:Limestone.6=true
+    B:Limestone.7=true
+    B:Limestone.8=true
+    B:LimestoneSlab=false
+    B:LimestoneSlab.1=false
+    B:LimestoneSlab.2=false
+    B:LimestoneSlab.3=false
+    B:LimestoneSlab.4=false
+    B:LimestoneSlab.5=false
+    B:LimestoneSlab.6=false
+    B:LimestoneSlab.7=false
+    B:ScorchedSlab=false
+    B:ScorchedSlab.1=false
+    B:ScorchedSlab.2=false
+    B:ScorchedSlab.3=false
+    B:ScorchedSlab.4=false
+    B:ScorchedSlab.5=false
+    B:ScorchedSlab.6=false
+    B:ScorchedSlab.7=false
+    B:blockCharcoal=true
+    B:dustStorage=true
+    B:dustStorage.1=true
+    B:liquidcement=false
+    B:moltenlimestone=false
+    B:tileMachineTurbine=false
+}
+
+
+voltzengine {
+    B:voltzengine.15=true
 }
 
 
