--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -72,6 +72,9 @@ modules {
     B:thermalexpansion.tankmode=true
     B:thermalexpansion.tessfreq=true
     B:thermalexpansion.tesssendrecv=true
+    B:tseelworks.autoUnit=true
+    B:tseelworks.listFluids=true
+    B:tseelworks.showTotal=true
     B:vanilla.comparator=true
     B:vanilla.jukebox=true
     B:vanilla.leverstate=true
@@ -132,6 +135,9 @@ server_forcing {
     B:thermalexpansion.tankmode=false
     B:thermalexpansion.tessfreq=false
     B:thermalexpansion.tesssendrecv=false
+    B:tseelworks.autoUnit=false
+    B:tseelworks.listFluids=false
+    B:tseelworks.showTotal=false
     B:vanilla.comparator=false
     B:vanilla.jukebox=false
     B:vanilla.leverstate=false
