--- a/config/cofh/thermalexpansion/florbs.cfg
+++ b/config/cofh/thermalexpansion/florbs.cfg
@@ -1,22 +1,19 @@
 # Configuration file
 
-item {
-
-    feature {
-        # This allows you to disable Florbs entirely. It also means that you actively dislike fun things.
-        B:Florb.Enable=true
-    }
-
+General {
+    # This allows you to disable recipes for Florbs. It also means that you actively dislike fun things.
+    B:Recipe.Enable=true
 }
 
 
-whitelist {
+Whitelist {
     B:aluminum.molten=true
     B:aluminumbrass.molten=true
     B:alumite.molten=true
     B:ardite.molten=true
     B:blood=true
     B:bronze.molten=true
+    B:cement.liquid=true
     B:coal=true
     B:cobalt.molten=true
     B:copper.molten=true
@@ -45,8 +42,9 @@ whitelist {
     B:iron.molten=true
     B:lava=true
     B:lead.molten=true
-    B:maddna=false
-    B:maddnamutant=false
+    B:limestone.molten=true
+    B:maddna=true
+    B:maddnamutant=true
     B:mana=true
     B:manyullyn.molten=true
     B:myst.ink.black=true
