--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -287,7 +287,7 @@
     B:updateLightingWhenHidingFacades=false
 
     # The range of the vacuum chest
-    D:vacumChestRange=6.0
+    D:vacumChestRange=6
 
     # The range of the wireless charger
     I:wirelessChargerRange=24
@@ -706,6 +706,9 @@ misc {
     # The number of levels it costs to add a broken spawner
     I:powerSpawnerAddSpawnerCost=30
 
+    # Number of seconds in which spawned entities are protected from despawning
+    I:poweredSpawnerDespawnTimeSeconds=120
+
     # RF per tick for a level 1 (non-upgraded) spawner. See PoweredSpanerConfig_Core.json for mob type multipliers
     I:poweredSpawnerLevelOnePowerPerTickRF=160
 
@@ -871,6 +874,27 @@ replacewitherskeletons {
 
     # Number of RF required per block travelled using the Staff of the Traveling.
     D:travelStaffPowerPerBlockRF=250.0
+}
+
+
+weather {
+    # The item required to set the world to clear weather.
+    S:weatherObeliskClearItem=minecraft:cake
+
+    # The power required to set the world to clear weather
+    I:weatherObeliskClearPower=1000000
+
+    # The item required to set the world to rainy weather.
+    S:weatherObeliskRainItem=minecraft:water_bucket
+
+    # The power required to set the world to rainy weather
+    I:weatherObeliskRainPower=250000
+
+    # The item required to set the world to thundering weather.
+    S:weatherObeliskThunderItem=minecraft:lava_bucket
+
+    # The power required to set the world to thundering weather
+    I:weatherObeliskThunderPower=500000
 }
 
 
