--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -162,6 +162,7 @@ symbol {
     B:modmat_tile.lava.enabled=true
     B:modmat_tile.lightgem.enabled=true
     B:modmat_tile.liquid.blood.enabled=true
+    B:modmat_tile.liquid.cement.enabled=true
     B:modmat_tile.liquid.glue.enabled=true
     B:modmat_tile.liquid.slime.enabled=true
     B:modmat_tile.log.acacia.enabled=true
@@ -173,6 +174,7 @@ symbol {
     B:modmat_tile.maddna.enabled=false
     B:modmat_tile.madmutantdna.enabled=false
     B:modmat_tile.molten.emerald.enabled=true
+    B:modmat_tile.molten.limestone.enabled=true
     B:modmat_tile.molten.stone.enabled=true
     B:modmat_tile.myst.crystal.enabled=true
     B:modmat_tile.myst.fluid.myst.ink.black.enabled=true
