Disable a ton of symbols

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1,5 +1,14 @@
 # Configuration file
 
+addictedtored {
+    B:chatblock=false
+    B:entitydetector=false
+    B:entitydetector.1=false
+    B:entitydetector.2=false
+    B:selectiondetector=false
+}
+
+
 appliedenergistics2 {
     B:tileBlockCellWorkbench=false
     B:tileBlockCharger=false
@@ -176,6 +185,12 @@ carpentersblocks {
     B:blockCarpentersSlope.4=false
     B:blockCarpentersStairs=false
     B:blockCarpentersTorch=false
+}
+
+
+chickenchunks {
+    B:chickenChunkLoader=false
+    B:chickenChunkLoader.1=false
 }
 
 
