--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -119,42 +119,42 @@ symbol {
     B:modhalf.enabled=true
     B:modmagenta.enabled=true
     B:modmaroon.enabled=true
-    B:modmat_ic2.fluidbiogas.enabled=true
-    B:modmat_ic2.fluidbiomass.enabled=true
-    B:modmat_ic2.fluidconstructionfoam.enabled=true
-    B:modmat_ic2.fluidcoolant.enabled=true
-    B:modmat_ic2.fluiddistilledwater.enabled=true
-    B:modmat_ic2.fluidhotcoolant.enabled=true
-    B:modmat_ic2.fluidpahoehoelava.enabled=true
-    B:modmat_ic2.fluidsteam.enabled=true
-    B:modmat_ic2.fluidsuperheatedsteam.enabled=true
-    B:modmat_ic2.fluiduumatter.enabled=true
-    B:modmat_tile.dirt.default.enabled=true
-    B:modmat_tile.fluid.fire_water.enabled=true
-    B:modmat_tile.fluid.hootch.enabled=true
-    B:modmat_tile.fluid.molten.alubrass.enabled=true
-    B:modmat_tile.fluid.molten.aluminum.enabled=true
-    B:modmat_tile.fluid.molten.alumite.enabled=true
-    B:modmat_tile.fluid.molten.ardite.enabled=true
-    B:modmat_tile.fluid.molten.bronze.enabled=true
-    B:modmat_tile.fluid.molten.cobalt.enabled=true
-    B:modmat_tile.fluid.molten.copper.enabled=true
-    B:modmat_tile.fluid.molten.electrum.enabled=true
-    B:modmat_tile.fluid.molten.glass.enabled=true
-    B:modmat_tile.fluid.molten.gold.enabled=true
-    B:modmat_tile.fluid.molten.invar.enabled=true
-    B:modmat_tile.fluid.molten.iron.enabled=true
-    B:modmat_tile.fluid.molten.lead.enabled=true
-    B:modmat_tile.fluid.molten.manyullyn.enabled=true
-    B:modmat_tile.fluid.molten.nickel.enabled=true
-    B:modmat_tile.fluid.molten.obsidian.enabled=true
-    B:modmat_tile.fluid.molten.pigiron.enabled=true
-    B:modmat_tile.fluid.molten.shiny.enabled=true
-    B:modmat_tile.fluid.molten.silver.enabled=true
-    B:modmat_tile.fluid.molten.steel.enabled=true
-    B:modmat_tile.fluid.molten.tin.enabled=true
-    B:modmat_tile.fluid.nutrient_distillation.enabled=true
-    B:modmat_tile.fluid.rocket_fuel.enabled=true
+    B:modmat_ic2.fluidbiogas.enabled=false
+    B:modmat_ic2.fluidbiomass.enabled=false
+    B:modmat_ic2.fluidconstructionfoam.enabled=false
+    B:modmat_ic2.fluidcoolant.enabled=false
+    B:modmat_ic2.fluiddistilledwater.enabled=false
+    B:modmat_ic2.fluidhotcoolant.enabled=false
+    B:modmat_ic2.fluidpahoehoelava.enabled=false
+    B:modmat_ic2.fluidsteam.enabled=false
+    B:modmat_ic2.fluidsuperheatedsteam.enabled=false
+    B:modmat_ic2.fluiduumatter.enabled=false
+    B:modmat_tile.dirt.default.enabled=false
+    B:modmat_tile.fluid.fire_water.enabled=false
+    B:modmat_tile.fluid.hootch.enabled=false
+    B:modmat_tile.fluid.molten.alubrass.enabled=false
+    B:modmat_tile.fluid.molten.aluminum.enabled=false
+    B:modmat_tile.fluid.molten.alumite.enabled=false
+    B:modmat_tile.fluid.molten.ardite.enabled=false
+    B:modmat_tile.fluid.molten.bronze.enabled=false
+    B:modmat_tile.fluid.molten.cobalt.enabled=false
+    B:modmat_tile.fluid.molten.copper.enabled=false
+    B:modmat_tile.fluid.molten.electrum.enabled=false
+    B:modmat_tile.fluid.molten.glass.enabled=false
+    B:modmat_tile.fluid.molten.gold.enabled=false
+    B:modmat_tile.fluid.molten.invar.enabled=false
+    B:modmat_tile.fluid.molten.iron.enabled=false
+    B:modmat_tile.fluid.molten.lead.enabled=false
+    B:modmat_tile.fluid.molten.manyullyn.enabled=false
+    B:modmat_tile.fluid.molten.nickel.enabled=false
+    B:modmat_tile.fluid.molten.obsidian.enabled=false
+    B:modmat_tile.fluid.molten.pigiron.enabled=false
+    B:modmat_tile.fluid.molten.shiny.enabled=false
+    B:modmat_tile.fluid.molten.silver.enabled=false
+    B:modmat_tile.fluid.molten.steel.enabled=false
+    B:modmat_tile.fluid.molten.tin.enabled=false
+    B:modmat_tile.fluid.nutrient_distillation.enabled=false
+    B:modmat_tile.fluid.rocket_fuel.enabled=false
     B:modmat_tile.glass.enabled=true
     B:modmat_tile.hellrock.enabled=true
     B:modmat_tile.ice.enabled=true
@@ -187,17 +187,17 @@ symbol {
     B:modmat_tile.oregold.enabled=true
     B:modmat_tile.oreiron.enabled=true
     B:modmat_tile.oreredstone.enabled=true
-    B:modmat_tile.railcraft.fluid.creosote.enabled=true
-    B:modmat_tile.railcraft.fluid.steam.enabled=true
+    B:modmat_tile.railcraft.fluid.creosote.enabled=false
+    B:modmat_tile.railcraft.fluid.steam.enabled=false
     B:modmat_tile.snow.enabled=true
     B:modmat_tile.stone.enabled=true
-    B:modmat_tile.thermalfoundation.fluid.coal.enabled=true
-    B:modmat_tile.thermalfoundation.fluid.cryotheum.enabled=true
-    B:modmat_tile.thermalfoundation.fluid.ender.enabled=true
-    B:modmat_tile.thermalfoundation.fluid.glowstone.enabled=true
-    B:modmat_tile.thermalfoundation.fluid.mana.enabled=true
-    B:modmat_tile.thermalfoundation.fluid.pyrotheum.enabled=true
-    B:modmat_tile.thermalfoundation.fluid.redstone.enabled=true
+    B:modmat_tile.thermalfoundation.fluid.coal.enabled=false
+    B:modmat_tile.thermalfoundation.fluid.cryotheum.enabled=false
+    B:modmat_tile.thermalfoundation.fluid.ender.enabled=false
+    B:modmat_tile.thermalfoundation.fluid.glowstone.enabled=false
+    B:modmat_tile.thermalfoundation.fluid.mana.enabled=false
+    B:modmat_tile.thermalfoundation.fluid.pyrotheum.enabled=false
+    B:modmat_tile.thermalfoundation.fluid.redstone.enabled=false
     B:modmat_tile.water.enabled=true
     B:modmat_tile.whitestone.enabled=true
     B:modnavy.enabled=true
