Clean up config folder

--- a/config/OpenComputers.cfg
+++ b/config/OpenComputers.cfg
@@ -228,35 +228,6 @@ opencomputers {
     # `canComputersBeOwned`.
     maxUsers=16
 
-    # This setting allows you to fine-tune how RAM sizes are scaled internally
-    # on 64 Bit machines (i.e. when the Minecraft server runs in a 64 Bit VM).
-    # Why is this even necessary? Because objects consume more memory in a 64
-    # Bit environment than in a 32 Bit one, due to pointers and possibly some
-    # integer types being twice as large. It's actually impossible to break
-    # this down to a single number, so this is really just a rough guess. If
-    # you notice this doesn't match what some Lua program would use on 32 bit,
-    # feel free to play with this and report your findings!
-    # Note that the values *displayed* to Lua via `computer.totalMemory` and
-    # `computer.freeMemory` will be scaled by the inverse, so that they always
-    # correspond to the "apparent" sizes of the installed memory modules. For
-    # example, when running a computer with a 64KB RAM module, even if it's
-    # scaled up to 96KB, `computer.totalMemory` will return 64KB, and if there
-    # are really 45KB free, `computer.freeMemory` will return 32KB.
-    ramScaleFor64Bit=1.8
-
-    # The sizes of the six levels of RAM, in kilobytes. This list must
-    # contain exactly six entries, or it will be ignored. Note that while
-    # there are six levels of RAM, they still fall into the three tiers of
-    # items (level 1, 2 = tier 1, level 3, 4 = tier 2, level 5, 6 = tier 3).
-    ramSizes=[
-      192,
-      256,
-      384,
-      512,
-      768,
-      1024
-    ]
-
     # The time in seconds to wait after a computer has been restored before it
     # continues to run. This is meant to allow the world around the computer
     # to settle, avoiding issues such as components in neighboring chunks
@@ -546,16 +517,6 @@ opencomputers {
     # open at a time.
     maxTcpConnections=4
 
-    # The maximum size of files / data that can be downloaded using HTTP-
-    # requests. This is to limit the size of the data that is written when
-    # the world is saved. If this is too large you run into danger of having
-    # chunks not save properly because Minecraft is derpy like that, and
-    # memory consumption can explode, too, if the requested data is not
-    # fetched by the requesting state (e.g. downloading a very large file).
-    # This is in bytes. Four MB is probably still too lenient. Consider
-    # reducing this number on servers.
-    requestMaxDownloadSize=4194304
-
     # The time in seconds to wait for a response to a request before timing
     # out and returning an error message. If this is zero (the default) the
     # request will never time out.
@@ -574,9 +535,7 @@ opencomputers {
     # whitelist and the blacklist, the blacklist will win.
     # Entries are of the same format as in the blacklist. Examples:
     # "gist.github.com", "www.pastebin.com"
-    whitelist=[
-      "www.pastebin.com"
-    ]
+    whitelist=[]
   }
 
   # Other settings that you might find useful to tweak.
@@ -995,16 +954,17 @@ opencomputers {
     # `tickFrequency * cost`.
     tickFrequency=10
 
-    # Power values for different power systems.
+    # Power values for different power systems. For reference, the value of
+    # OC's internal energy type is 1000. I.e. the conversion ratios are the
+    # values here divided by 1000. This is mainly to avoid small floating
+    # point numbers in the config, due to potential loss of precision.
     value {
       AppliedEnergistics2=200
-      BuildCraft=500
       Factorization=13
       Galacticraft=48
       IndustrialCraft2=400
       Mekanism=1333.33
       RedstoneFlux=100
-      ResonantEngine=1750
     }
   }
 
