--- a/config/cofh/thermalexpansion/florbs.cfg
+++ b/config/cofh/thermalexpansion/florbs.cfg
@@ -43,8 +43,8 @@ Whitelist {
     B:lava=true
     B:lead.molten=true
     B:limestone.molten=true
-    B:maddna=true
-    B:maddnamutant=true
+    B:maddna=false
+    B:maddnamutant=false
     B:mana=true
     B:manyullyn.molten=true
     B:myst.ink.black=true
