--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Tue Mar 03 21:46:13 EST 2015
+#Wed Mar 04 14:17:00 EST 2015
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
@@ -17,4 +17,4 @@ shortcutKeyOneItem=LCONTROL, RCONTROL
 shortcutKeyToUpperSection=UP
 shortcutKeyToLowerSection=DOWN
 shortcutKeyDrop=LALT, RALT
-version=1.58-147-645ca10
+version=1.59-dev-156-af3bc68
