--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1,6 +1,12 @@
 # Configuration file
 
 addictedtored {
+    B:addictedtoredchatblock=false
+    B:addictedtoredentitydetector=false
+    B:addictedtoredentitydetector.1=false
+    B:addictedtoredentitydetector.2=false
+    B:addictedtoredselectiondetector=false
+    B:addictedtoredsoundBlock=false
     B:chatblock=false
     B:entitydetector=false
     B:entitydetector.1=false
@@ -1452,6 +1458,7 @@ enderio {
     B:blockStirlingGenerator=false
     B:blockTank=false
     B:blockTank.1=false
+    B:blockTelePad=false
     B:blockTransceiver=false
     B:blockTravelAnchor=false
     B:blockVacuumChest=false
@@ -2022,6 +2029,7 @@ icbm {
     B:TileMissile=false
     B:TileMissile.1=false
     B:missileDisplay=false
+    B:missileworkstation=false
     B:smallLauncher=false
 }
 
@@ -3500,6 +3508,7 @@ tsteelworks {
 
 
 voltzengine {
+    B:VEHeatedRock.15=true
     B:voltzengine.15=true
 }
 
