--- a/config/cofh/thermalexpansion/common.cfg
+++ b/config/cofh/thermalexpansion/common.cfg
@@ -214,6 +214,14 @@ Light {
         B:Recipe.Enable=true
     }
 
+    LampLumiumRadiant {
+        B:Recipe.Enable=true
+    }
+
+    LampLumium {
+        B:Recipe.Enable=true
+    }
+
 }
 
 
@@ -610,7 +618,7 @@ Tank {
 
 
 Version {
-    S:Identifier=1.7.10R4.0.0RC3
+    S:Identifier=1.7.10R4.0.0RC7
 }
 
 
