--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Wed Mar 04 14:17:00 EST 2015
+#Thu Mar 19 19:27:47 EDT 2015
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
