--- a/config/mystcraft/core.cfg
+++ b/config/mystcraft/core.cfg
@@ -288,12 +288,14 @@ general {
     B:options.desk.enabled=true
     B:options.deskback.enabled=true
     B:options.fastRainbows=true
+    B:options.folder.enabled=true
     B:options.inkmixer.enabled=true
     S:options.instability.difficulty=
     B:options.instability.enabled=false
     B:options.lectern.enabled=true
     B:options.linkbook.enabled=true
     B:options.notebook.enabled=true
+    B:options.portfolio.enabled=true
     I:options.providerId=1210950779
     B:options.receptacle.enabled=true
     B:options.renderlabels=false
