--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -132,7 +132,7 @@ features {
         B:PowerGen=true
         B:QuantumNetworkBridge=true
         B:Security=true
-        B:SpatialIO=true
+        B:SpatialIO=false
     }
 
     networkbuses {
