--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -76,6 +76,18 @@ appliedenergistics2 {
 }
 
 
+betterstorage {
+    B:armorStand=false
+    B:cardboardBox=false
+    B:craftingStation=false
+    B:crate=false
+    B:flintBlock=true
+    B:lockableDoor=false
+    B:locker=false
+    B:present=false
+}
+
+
 bluepower {
     B:alloyfurnace=false
     B:amethystblock=true
@@ -1490,6 +1502,13 @@ endertech {
 }
 
 
+enderzoo {
+    B:blockConcussionCharge=true
+    B:blockConfusingCharge=true
+    B:blockEnderCharge=true
+}
+
+
 extracells {
     B:certustank=false
     B:ecbaseblock=false
@@ -1732,11 +1751,14 @@ extrautilities {
     B:cursedearthside=false
     B:curtains=false
     B:darkportal=false
+    B:darkportal.2=false
     B:decorativeBlock1=true
     B:decorativeBlock1.1=true
     B:decorativeBlock1.10=true
     B:decorativeBlock1.11=true
     B:decorativeBlock1.12=true
+    B:decorativeBlock1.13=true
+    B:decorativeBlock1.14=true
     B:decorativeBlock1.2=true
     B:decorativeBlock1.3=true
     B:decorativeBlock1.4=true
@@ -1748,6 +1770,7 @@ extrautilities {
     B:decorativeBlock2=false
     B:decorativeBlock2.1=false
     B:decorativeBlock2.10=false
+    B:decorativeBlock2.11=false
     B:decorativeBlock2.2=false
     B:decorativeBlock2.3=false
     B:decorativeBlock2.4=false
@@ -1776,6 +1799,9 @@ extrautilities {
     B:etherealglass=false
     B:etherealglass.1=false
     B:etherealglass.2=false
+    B:etherealglass.3=false
+    B:etherealglass.4=false
+    B:etherealglass.5=false
     B:extractorbase=false
     B:extractorbase.12=false
     B:extractorbase.13=false
@@ -1896,6 +1922,149 @@ framez {
     B:motorcore=false
     B:motorrf=false
     B:moving=false
+}
+
+
+galacticraftcore {
+    B:slabGCDouble=true
+    B:slabGCDouble.1=true
+    B:slabGCDouble.2=true
+    B:slabGCDouble.3=true
+    B:slabGCDouble.4=true
+    B:slabGCDouble.5=true
+    B:slabGCHalf=false
+    B:slabGCHalf.1=false
+    B:slabGCHalf.2=false
+    B:slabGCHalf.3=false
+    B:slabGCHalf.4=false
+    B:slabGCHalf.5=false
+    B:tileairLockFrame=false
+    B:tileairLockFrame.1=false
+    B:tileairLockSeal=false
+    B:tilealuminumWire=false
+    B:tilealuminumWire.1=false
+    B:tilearclamp=false
+    B:tilebreatheableAir=false
+    B:tilebrightAir=false
+    B:tilebrightBreathableAir=false
+    B:tilecargo=false
+    B:tilecargo.4=false
+    B:tilecheeseBlock=false
+    B:tilecrudeOilStill=false
+    B:tiledish=false
+    B:tiledistributor=false
+    B:tiledummyblock=false
+    B:tileenclosed.1=false
+    B:tileenclosed.14=false
+    B:tileenclosed.15=false
+    B:tilefallenMeteor=false
+    B:tilefuel=false
+    B:tilefuelLoader=false
+    B:tilegcBlockCore.10=true
+    B:tilegcBlockCore.11=true
+    B:tilegcBlockCore.12=true
+    B:tilegcBlockCore.3=true
+    B:tilegcBlockCore.4=true
+    B:tilegcBlockCore.5=true
+    B:tilegcBlockCore.6=true
+    B:tilegcBlockCore.7=true
+    B:tilegcBlockCore.8=true
+    B:tilegcBlockCore.9=true
+    B:tileglowstoneTorch=false
+    B:tilelandingPad=false
+    B:tilelandingPad.1=false
+    B:tilelandingPadFull=false
+    B:tilemachine=false
+    B:tilemachine.12=false
+    B:tilemachine2=false
+    B:tilemachine2.4=false
+    B:tilemachine2.8=false
+    B:tilemachineTiered=false
+    B:tilemachineTiered.12=false
+    B:tilemachineTiered.4=false
+    B:tilemachineTiered.8=false
+    B:tilemoonBlock=true
+    B:tilemoonBlock.1=true
+    B:tilemoonBlock.14=true
+    B:tilemoonBlock.2=true
+    B:tilemoonBlock.3=true
+    B:tilemoonBlock.4=true
+    B:tilemoonBlock.5=true
+    B:tilemoonBricksStairs=false
+    B:tilemoonStoneStairs=false
+    B:tileoxygenCollector=false
+    B:tileoxygenCompressor=false
+    B:tileoxygenCompressor.4=false
+    B:tileoxygenDetector=false
+    B:tileoxygenPipe=false
+    B:tileparachest=false
+    B:tilerefinery=false
+    B:tilerocketWorkbench=false
+    B:tilesealer=false
+    B:tilesolar=false
+    B:tilesolar.4=false
+    B:tilespaceStationBase=false
+    B:tilespinThruster=false
+    B:tiletelemetry=false
+    B:tiletinStairs1=false
+    B:tiletinStairs2=false
+    B:tiletreasureChest=false
+    B:tileunlitTorch=false
+    B:tileunlitTorchLit=false
+    B:tileviewScreen=false
+    B:tilewallGC=false
+    B:tilewallGC.1=false
+    B:tilewallGC.2=false
+    B:tilewallGC.3=false
+    B:tilewallGC.4=false
+    B:tilewallGC.5=false
+}
+
+
+galacticraftmars {
+    B:tileasteroidsBlock=true
+    B:tileasteroidsBlock.1=true
+    B:tileasteroidsBlock.2=true
+    B:tileasteroidsBlock.3=true
+    B:tileasteroidsBlock.4=true
+    B:tileasteroidsBlock.5=true
+    B:tilebeamReceiver=false
+    B:tilebeamReflector=false
+    B:tilecavernVines=false
+    B:tilecreeperEgg=false
+    B:tiledenseIce=false
+    B:tilehydrogenPipe=false
+    B:tilemars=true
+    B:tilemars.1=true
+    B:tilemars.2=true
+    B:tilemars.3=true
+    B:tilemars.4=true
+    B:tilemars.5=true
+    B:tilemars.6=true
+    B:tilemars.7=true
+    B:tilemars.8=true
+    B:tilemars.9=true
+    B:tilemarsCobblestoneStairs=false
+    B:tilemarsDungeonBricksStairs=false
+    B:tilemarsMachine=false
+    B:tilemarsMachine.4=false
+    B:tilemarsMachine.8=false
+    B:tilemarsMachineT2=false
+    B:tilemarsMachineT2.4=false
+    B:tilemarsMachineT2.8=false
+    B:tileminerBase=false
+    B:tileminerBaseFull=false
+    B:tileslimelingEgg=false
+    B:tileslimelingEgg.1=false
+    B:tileslimelingEgg.2=false
+    B:tilesludge=false
+    B:tiletelepadFake=false
+    B:tiletelepadShort=false
+    B:tiletreasureT2=false
+    B:tiletreasureT3=false
+    B:tilewalkway=false
+    B:tilewalkwayOxygenPipe=false
+    B:tilewalkwayWire=false
 }
 
 
@@ -2031,6 +2200,7 @@ icbm {
     B:missileDisplay=false
     B:missileworkstation=false
     B:smallLauncher=false
+    B:smallsilo=false
 }
 
 
@@ -2089,6 +2259,8 @@ mekanism {
     B:BasicBlock.8=false
     B:BasicBlock.9=false
     B:BasicBlock2=false
+    B:BasicBlock2.1=false
+    B:BasicBlock2.2=false
     B:BoundingBlock=false
     B:CardboardBox=false
     B:GasTank=false
@@ -2126,6 +2298,9 @@ mekanism {
     B:MachineBlock2.10=false
     B:MachineBlock2.11=false
     B:MachineBlock2.12=false
+    B:MachineBlock2.13=false
+    B:MachineBlock2.14=false
+    B:MachineBlock2.15=false
     B:MachineBlock2.2=false
     B:MachineBlock2.3=false
     B:MachineBlock2.4=false
@@ -2134,6 +2309,8 @@ mekanism {
     B:MachineBlock2.7=false
     B:MachineBlock2.8=false
     B:MachineBlock2.9=false
+    B:MachineBlock3.1=false
+    B:MachineBlock3.3=false
     B:ObsidianTNT=false
     B:OreBlock=true
     B:OreBlock.1=true
@@ -2155,6 +2332,21 @@ mekanism {
     B:PlasticBlock.8=true
     B:PlasticBlock.9=true
     B:PlasticFence=false
+    B:PlasticFence.1=false
+    B:PlasticFence.10=false
+    B:PlasticFence.11=false
+    B:PlasticFence.12=false
+    B:PlasticFence.13=false
+    B:PlasticFence.14=false
+    B:PlasticFence.15=false
+    B:PlasticFence.2=false
+    B:PlasticFence.3=false
+    B:PlasticFence.4=false
+    B:PlasticFence.5=false
+    B:PlasticFence.6=false
+    B:PlasticFence.7=false
+    B:PlasticFence.8=false
+    B:PlasticFence.9=false
     B:ReinforcedPlasticBlock=true
     B:ReinforcedPlasticBlock.1=true
     B:ReinforcedPlasticBlock.10=true
@@ -2214,6 +2406,11 @@ mekanismgenerators {
     B:Generator.4=false
     B:Generator.5=false
     B:Generator.6=false
+    B:Reactor=false
+    B:Reactor.1=false
+    B:Reactor.3=false
+    B:ReactorGlass=false
+    B:ReactorGlass.1=false
 }
 
 
@@ -2564,6 +2761,7 @@ opencomputers {
     B:case2=false
     B:case3=false
     B:caseCreative=false
+    B:chameliumBlock=true
     B:charger=false
     B:disassembler=false
     B:diskDrive=false
@@ -2575,6 +2773,8 @@ opencomputers {
     B:motionSensor=false
     B:powerConverter=false
     B:powerDistributor=false
+    B:print=false
+    B:printer=false
     B:raid=false
     B:redstone=false
     B:robot=false
