--- a/config/bbm/ICBM.cfg
+++ b/config/bbm/ICBM.cfg
@@ -1,2 +1,14 @@
 # Configuration file
 
+general {
+    # Allows antimatter to break blocks that are unbreakable, bedrock for example. [default: true]
+    B:Antimatter_Destroy_Unbreakable=true
+}
+
+
+volume {
+    #  [range: 0.0 ~ 4.0, default: 1.0]
+    S:=1.0
+}
+
+
