--- a/config/mystcraft/core.cfg
+++ b/config/mystcraft/core.cfg
@@ -243,6 +243,7 @@ balance {
     S:ic2.fluiddistilledwater.instability.factor_flat=
     S:ic2.fluiddistilledwater.rarity=
     S:ic2.fluiddistilledwater.seabanned=
+    S:ic2.fluidhotcoolant.cardrank=
     S:ic2.fluidhotcoolant.grammar=
     S:ic2.fluidhotcoolant.instability.factor_accessibility=
     S:ic2.fluidhotcoolant.instability.factor_flat=
