--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -47,6 +47,7 @@ modules {
     B:bb.itemtype=true
     B:bb.space=true
     B:enderstorage.colors=true
+    B:extrautilities.fluidamount=true
     B:facades.hidden=true
     B:general.showcrop=true
     B:general.showhp=true
@@ -104,6 +105,7 @@ server_forcing {
     B:bb.itemtype=false
     B:bb.space=false
     B:enderstorage.colors=false
+    B:extrautilities.fluidamount=false
     B:facades.hidden=false
     B:general.showcrop=false
     B:general.showhp=false
