--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -497,6 +497,9 @@ misc {
     # Maximum level of XP the killer joe can contain.
     I:killerJoeMaxXpLevel=2147483647
 
+    # Separates wither and normal skeletons into different entities, enables the powered spawner to treat them differently [EXPERIMENTAL - MAY CAUSE ISSUES WITH OTHER MODS]
+    B:replaceWitherSkeletons=false
+
     # Id of liquid XP fluid (WARNING: only for users who know what they are doing - changing this id can break worlds) - this should match the with OpenBlocks when installed [default: xpjuice]
     S:xpJuiceName=xpjuice
 
@@ -705,8 +708,6 @@ misc {
 
     # The number of levels it costs to add a broken spawner
     I:powerSpawnerAddSpawnerCost=30
-
-    # Number of seconds in which spawned entities are protected from despawning
     I:poweredSpawnerDespawnTimeSeconds=120
 
     # RF per tick for a level 1 (non-upgraded) spawner. See PoweredSpanerConfig_Core.json for mob type multipliers
@@ -787,7 +788,6 @@ rail {
 
 
 replacewitherskeletons {
-    # Separates wither and normal skeletons into different entities, enables the powered spawner to treat them differently [EXPERIMENTAL - MAY CAUSE ISSUES WITH OTHER MODS]
     B:Misc=true
 }
 
@@ -878,22 +878,11 @@ replacewitherskeletons {
 
 
 weather {
-    # The item required to set the world to clear weather.
     S:weatherObeliskClearItem=minecraft:cake
-
-    # The power required to set the world to clear weather
     I:weatherObeliskClearPower=1000000
-
-    # The item required to set the world to rainy weather.
     S:weatherObeliskRainItem=minecraft:water_bucket
-
-    # The power required to set the world to rainy weather
     I:weatherObeliskRainPower=250000
-
-    # The item required to set the world to thundering weather.
     S:weatherObeliskThunderItem=minecraft:lava_bucket
-
-    # The power required to set the world to thundering weather
     I:weatherObeliskThunderPower=500000
 }
 
